Added Seaborn Visualization of Histograms

--- a/Week04/Data-Project(First Project)/solution.ipynb
+++ b/Week04/Data-Project(First Project)/solution.ipynb
@@ -1390,6 +1390,47 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sns.histplot(df_dropped, x='Hispanic')\n",
+    "plt.savefig('seaborn_HistogramofHispanicPopulation.png')\n",
+    "plt.clf() \n",
+    "\n",
+    "sns.histplot(df_dropped, x='White')\n",
+    "plt.savefig('seaborn_HistogramofWhitePopulation.png')\n",
+    "plt.clf() \n",
+    "\n",
+    "sns.histplot(df_dropped, x='Black')\n",
+    "plt.savefig('seaborn_HistogramofBlackPopulation.png')\n",
+    "plt.clf() \n",
+    "\n",
+    "sns.histplot(df_dropped, x='Native')\n",
+    "plt.savefig('seaborn_HistogramofNativePopulation.png')\n",
+    "plt.clf() \n",
+    "\n",
+    "sns.histplot(df_dropped, x='Asian')\n",
+    "plt.savefig('seaborn_HistogramofAsianPopulation.png')\n",
+    "plt.clf() \n",
+    "\n",
+    "sns.histplot(df_dropped, x='Pacific')\n",
+    "plt.savefig('seaborn_HistogramofPacificPopulation.png')\n",
+    "plt.clf() "
+   ]
   }
  ],
  "metadata": {
